feat: Add JSON output for embeddings\n\n- Modify embeddings_generator.py to save embeddings data to JSON files\n- Add EMBEDDINGS_OUTPUT_DIR environment variable in Dockerfile\n- Update docker run command in README.md to include embeddings output volume\n- JSON files now contain file name, chunk id, content, and embedding vector

--- a/batch/embeddings/Dockerfile
+++ b/batch/embeddings/Dockerfile
@@ -6,11 +6,12 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Create directories for input and app code
-RUN mkdir -p /input /app
+# Create directories for input, app code, and embeddings output
+RUN mkdir -p /input /app /embeddings_output
 
 # Set environment variables
 ENV TEXT_OUTPUT_DIR=/input
+ENV EMBEDDINGS_OUTPUT_DIR=/embeddings_output
 
 # Set default command
 CMD ["python", "/app/embeddings_generator.py"]
